Fix figcaption styling by removing color attribute for consistency

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -22,7 +22,7 @@ As a lifelong AI tinkerer and chess fan, I’ve always wondered why LLMs stumble
   <img src="/images/gambit.webp" 
        alt="Queen's Gambit" 
        style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">
+  <figcaption style="font-size: 0.9em;  margin-top: 0.5em;">
     <em>The Queen’s Gambit</em> helped spark a modern chess renaissance.
   </figcaption>
 </figure>
@@ -51,7 +51,7 @@ The **endgame** is surgical. With material thinned, every tempo matters: activat
   <img src="/images/magnuskasparov.jpg" 
        alt="Magnus Carlsen vs Garry Kasparov" 
        style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">
+  <figcaption style="font-size: 0.9em;  margin-top: 0.5em;">
     Magnus Carlsen (age 13) drawing Garry Kasparov at the Reykjavik Rapid—history foreshadowed.
   </figcaption>
 </figure>
@@ -98,7 +98,7 @@ Treating control as inference unifies planning and uncertainty in one framework:
   <img src="/images/statemarginals.png" 
        alt="State Marginals in Graphical Models" 
        style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">
+  <figcaption style="font-size: 0.9em;  margin-top: 0.5em;">
     Forward and backward message “cones” overlap to highlight likely optimal trajectories.
   </figcaption>
 </figure>
